[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/pixel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/ShieldPooperShip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="ShieldPooperShip" type="Area2D" groups=["ShieldPooperShips"]]
collision_layer = 4
collision_mask = 72
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Pixel" type="Sprite" parent="."]
modulate = Color( 0.870588, 0.494118, 0.494118, 1 )
scale = Vector2( 40, 40 )
texture = ExtResource( 1 )

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShieldPoopTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="area_entered" from="." to="." method="body_entered"]
